--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="./assets/icon/logo.svg" type="image/x-icon">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@700&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -18,12 +21,15 @@
     <nav class="navbar">
         <div class="content-wrapper">
             <a href="#" class="navbar__brand">Easy<span class="highlighted-text">Lens</span></a>
+
             <ul>
                 <li class="navbar__list"><a href="#beranda" class="navbar__link active">Beranda</a></li>
                 <li class="navbar__list"><a href="#layanan" class="navbar__link">Layanan</a></li>
                 <li class="navbar__list"><a href="#produk" class="navbar__link">Produk & Jasa</a></li>
                 <li class="navbar__list"><a href="#cara-pemesanan" class="navbar__link">Cara Pemesanan</a></li>
             </ul>
+
+            <div class="navbar-overlay"></div>
 
             <a href="#" class="get-started-button">
                 Mulai Sekarang 
@@ -56,22 +62,22 @@
             </div>
 
             <div class="beranda__image-group">
-                <img src="./assets/img/kamera-illustration.png" alt="Camera Illustration">
+                <img src="./assets/img/kamera-illustration.png" alt="Camera Illustration" loading="lazy">
             </div>
         </section>
 
         <section id="layanan" class="content-section">
             <div class="layanan__box-group">
                 <div class="layanan__box">
-                    <img src="./assets/img/sewa-kamera-illustration.svg" alt="Rental Camera Illustration">
+                    <img src="./assets/img/sewa-kamera-illustration.svg" alt="Rental Camera Illustration" loading="lazy">
                     <h5 class="layanan__title">Penyewaan Kamera</h5>
                 </div>
                 <div class="layanan__box">
-                    <img src="./assets/img/fotografer-illustration.svg" alt="Photographer Illustration">
+                    <img src="./assets/img/fotografer-illustration.svg" alt="Photographer Illustration" loading="lazy">
                     <h5 class="layanan__title">Jasa Fotografer</h5>
                 </div>
                 <div class="layanan__box">
-                    <img src="./assets/img/videografer-illustration.svg" alt="Videographer Camera">
+                    <img src="./assets/img/videografer-illustration.svg" alt="Videographer Camera" loading="lazy">
                     <h5 class="layanan__title">Jasa Videografer</h5>
                 </div>
             </div>
@@ -80,15 +86,15 @@
 
             <div class="layanan__content">
                 <div class="layanan__content-box">
-                    <img src="./assets/img/user-friendly-illustration.svg" alt="User Friendly Illustration">
+                    <img src="./assets/img/user-friendly-illustration.svg" alt="User Friendly Illustration" loading="lazy">
                     <h5 class="layanan__content-title">Aplikasi User-Friendly</h5>
                 </div>
                 <div class="layanan__content-box">
-                    <img src="./assets/img/produk-kualitas-illustration.svg" alt="User Friendly Illustration">
+                    <img src="./assets/img/produk-kualitas-illustration.svg" alt="User Friendly Illustration" loading="lazy">
                     <h5 class="layanan__content-title">Produk & Jasa Berkualitas </h5>
                 </div>
                 <div class="layanan__content-box">
-                    <img src="./assets/img/payment-sistem-illustration.svg" alt="Online Payment System Illustration">
+                    <img src="./assets/img/payment-sistem-illustration.svg" alt="Online Payment System Illustration" loading="lazy">
                     <h5 class="layanan__content-title">Sistem Pembayaran Online</h5>
                 </div>
             </div>
@@ -129,15 +135,15 @@
                 <div class="produk__box">
                     <a href="#" class="produk__link"></a>
                     <div class="produk__box-image">
-                        <img src="./assets/img/produk/canon-650d-18-135mm-stm-review.jpg" alt="Canon 650D 18 0 135mm" loading="lazy">
+                        <img src="./assets/img/produk/Canon-EOS-1200D-Harga-canon-eos-1200D.webp" alt="Canon EOS 1200D" loading="lazy">
                     </div>
                     <div class="produk__box-body">
                         <h3 class="produk__title">
-                            Canon 650D 18 0 135mm
+                            Canon EOS 1200D
                         </h3>
                         <div class="produk__body-footer">
                             <h5 class="produk__price">
-                                Rp. 80,000
+                                Rp. 120,000
                             </h5>
                         </div>
                     </div>
@@ -151,15 +157,15 @@
                 <div class="produk__box">
                     <a href="#" class="produk__link"></a>
                     <div class="produk__box-image">
-                        <img src="./assets/img/produk/canon-650d-18-135mm-stm-review.jpg" alt="Canon 650D 18 0 135mm" loading="lazy">
+                        <img src="./assets/img/produk/Canon_EOS_1100D_1.jpg.webp" alt="Canon EOS 1100D" loading="lazy">
                     </div>
                     <div class="produk__box-body">
                         <h3 class="produk__title">
-                            Canon 650D 18 0 135mm
+                            Canon EOS 1100D
                         </h3>
                         <div class="produk__body-footer">
                             <h5 class="produk__price">
-                                Rp. 80,000
+                                Rp. 100,000
                             </h5>
                         </div>
                     </div>
@@ -173,15 +179,15 @@
                 <div class="produk__box">
                     <a href="#" class="produk__link"></a>
                     <div class="produk__box-image">
-                        <img src="./assets/img/produk/canon-650d-18-135mm-stm-review.jpg" alt="Canon 650D 18 0 135mm" loading="lazy">
+                        <img src="./assets/img/produk/nikon_d7200_bo-600x666.jpg" alt="Nikon D7200" loading="lazy">
                     </div>
                     <div class="produk__box-body">
                         <h3 class="produk__title">
-                            Canon 650D 18 0 135mm
+                            Nikon D7200
                         </h3>
                         <div class="produk__body-footer">
                             <h5 class="produk__price">
-                                Rp. 80,000
+                                Rp. 60,000
                             </h5>
                         </div>
                     </div>
@@ -195,15 +201,15 @@
                 <div class="produk__box">
                     <a href="#" class="produk__link"></a>
                     <div class="produk__box-image">
-                        <img src="./assets/img/produk/canon-650d-18-135mm-stm-review.jpg" alt="Canon 650D 18 0 135mm" loading="lazy">
+                        <img src="./assets/img/produk/canon-eos-5d.jfif" alt="Canon EOS 5D" loading="lazy">
                     </div>
                     <div class="produk__box-body">
                         <h3 class="produk__title">
-                            Canon 650D 18 0 135mm
+                            Canon EOS 5D
                         </h3>
                         <div class="produk__body-footer">
                             <h5 class="produk__price">
-                                Rp. 80,000
+                                Rp. 50,000
                             </h5>
                         </div>
                     </div>
@@ -217,15 +223,15 @@
                 <div class="produk__box">
                     <a href="#" class="produk__link"></a>
                     <div class="produk__box-image">
-                        <img src="./assets/img/produk/canon-650d-18-135mm-stm-review.jpg" alt="Canon 650D 18 0 135mm" loading="lazy">
+                        <img src="./assets/img/produk/canon-eos-600d.jpg" alt="Canon EOS 600D" loading="lazy">
                     </div>
                     <div class="produk__box-body">
                         <h3 class="produk__title">
-                            Canon 650D 18 0 135mm
+                            Canon EOS 600D
                         </h3>
                         <div class="produk__body-footer">
                             <h5 class="produk__price">
-                                Rp. 80,000
+                                Rp. 75,000
                             </h5>
                         </div>
                     </div>
@@ -239,15 +245,15 @@
                 <div class="produk__box">
                     <a href="#" class="produk__link"></a>
                     <div class="produk__box-image">
-                        <img src="./assets/img/produk/canon-650d-18-135mm-stm-review.jpg" alt="Canon 650D 18 0 135mm" loading="lazy">
+                        <img src="./assets/img/produk/canon-eos-60d.jpg" alt="Canon EOS 60D" loading="lazy">
                     </div>
                     <div class="produk__box-body">
                         <h3 class="produk__title">
-                            Canon 650D 18 0 135mm
+                            Canon EOS 60D
                         </h3>
                         <div class="produk__body-footer">
                             <h5 class="produk__price">
-                                Rp. 80,000
+                                Rp. 65,000
                             </h5>
                         </div>
                     </div>
@@ -261,15 +267,15 @@
                 <div class="produk__box">
                     <a href="#" class="produk__link"></a>
                     <div class="produk__box-image">
-                        <img src="./assets/img/produk/canon-650d-18-135mm-stm-review.jpg" alt="Canon 650D 18 0 135mm" loading="lazy">
+                        <img src="./assets/img/produk/canon-eos-70d.jpg" alt="Canon EOS 70D" loading="lazy">
                     </div>
                     <div class="produk__box-body">
                         <h3 class="produk__title">
-                            Canon 650D 18 0 135mm
+                            Canon EOS 70D
                         </h3>
                         <div class="produk__body-footer">
                             <h5 class="produk__price">
-                                Rp. 80,000
+                                Rp. 88,000
                             </h5>
                         </div>
                     </div>
